--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div>  
+    <!-- <script  src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.js"></script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
