app keyboard modfied

--- a/index.html
+++ b/index.html
@@ -17,25 +17,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <link rel="stylesheet" href="/loader.css">
   </head>
   <body>
-    <div id="root">
-      <section class="preloader">
-        <div class="loading-area">
-          <img src="/logo.png">
-          <div class="loader">
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-              <div></div>
-          </div>
-      </div>
-       </section>
-    </div>  
+    <div id="root"></div>  
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
